# notes-vault

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  windows-build.yml
docs/: specification.rst
notes_app/: __main__.py  app.py  core.py  gui.py  storage.py
tests/: test_core.py  test_storage.py
