[tool.poetry]
name = "notes-vault"
version = "0.1.0"
description = "A simple desktop application for managing personal notes"
authors = ["Kenneth Chua <kennethchua474@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
